# MycoAI

./: .gitignore  .gitmodules  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  TODO  environment.yml  example copy.py  example.py  new.py  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
RDP/: __init__.py  rdp_classifier.py
data/: README.md  test1.fasta  top50.fasta
docs/: Makefile  conf.py  index.rst  make.bat
loggingwrapper/: loggingwrapper.py
models/: MycoAI_known_labels.json  README.md
mycoai/: __init__.py  data.py  encoders.py  evaluate.py  my_module.py  plotter.py  utils.py
mycoai/data/: __init__.py  data.py  encoders.py  tensor_data.py
mycoai/deep/models/: __init__.py  architectures.py  deep_its_classifier.py  output_heads.py  transformers.py
mycoai/deep/train/: __init__.py  deep_its_trainer.py  label_smoothing.py  loss.py  masked_language_modeling.py  weight_schedules.py
mycoai/loggingwrapper/: __init__.py  loggingwrapper.py
mycoai/models/: __init__.py  architectures.py  classifyBLAST.py  deep_its.py  its_classifier.py  transformer.py  transformers.py
mycoai/modules/: __init__.py  cnns.py  seq_class_network.py  transformers.py
mycoai/scripts/: classify.py  evaluate.py  map.py  train.py
mycoai/trad/: __init__.py  classifyBLAST.py
mycoai/train/: __init__.py  loss.py  masked_language_modeling.py  seq_class_trainer.py  weight_schedules.py
mycoai/training/: __init__.py  classification.py  pretraining.py  weight_schedules.py
paper/: README.md  create_datasets.py  create_trainset.py  evaluate_deep.py  figures.py  restore_model.py  train_bert_encodings.py  train_bert_multi.py  train_bert_single.py  train_bert_sizes.py  train_cnn_archs.py  train_cnn_multi.py  train_cnn_single.py
scripts/: classify.py  evaluate.py  hyperparameters.config  its_classifier.py  map.py  train.py
scripts/deep_its/: classify.py  train.py
scripts/paper/: README.md  architectures.py  create_datasets.py  create_trainset.py  evaluate_deep.py  evaluate_trad.py  figures.py  restore_model.py  subset.py  trad_preprocess.py  train_cnn.py  train_large.py  train_multi.py  train_single.py
tests/: test_my_module.py
